--- a/gold-admin-frontend/src/app/views/pages/admin/masters/occupation/occupation-add/occupation-add.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/masters/occupation/occupation-add/occupation-add.component.html
@@ -14,9 +14,9 @@
                             <mat-error *ngIf="controls.name.touched && controls.name.errors?.required">
                                 Required field
                             </mat-error>
-                            <!-- <mat-error *ngIf="controls.name.touched && controls.name.errors?.pattern">
+                            <mat-error *ngIf="controls.name.touched && controls.name.errors?.pattern">
                                 Invalid Input
-                            </mat-error> -->
+                            </mat-error>
                         </div>
                     </div>
                 </div>
