--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/upload-loan-documents/upload-loan-documents.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/tabs/upload-loan-documents/upload-loan-documents.component.html
@@ -1,10 +1,10 @@
-<div class="row justify-content-around">
+<div class="row justify-content-around" [formGroup]="documentsForm">
     <div class="col-11">
         <div class="row kt-padding-t-15 kt-padding-b-20 justify-content-around">
             <div class="col-4 form-label" *ngIf="!show">
                 <label class="kt-padding-l-10">Loan Agreement Copy</label>
             </div>
-            <div class="col-4 form-label" >
+            <div class="col-4 form-label">
                 <label class="kt-padding-l-10">Pawn Ticket/Copy of pledge</label>
             </div>
             <div class="col-4 form-label" *ngIf="!show">
@@ -14,14 +14,14 @@
                 <label class="kt-padding-l-10">Signed Cheque Copy</label>
             </div>
             <div class="col-4 form-label" *ngIf="show">
-                <label class="kt-padding-l-10" >Declaration Copy</label>
+                <label class="kt-padding-l-10">Declaration Copy</label>
             </div>
         </div>
         <div class="row justify-content-between">
-            <div class="col-4"  *ngIf="!show">
+            <div class="col-4" *ngIf="!show">
                 <div class="input-group mb-3">
                     <input type="text" class="form-control" placeholder="Select File" aria-label="Recipient's username"
-                        aria-describedby="basic-addon2" readonly />
+                        aria-describedby="basic-addon2" readonly formControlName="loanAgreementImageName" />
                     <div class="input-group-append">
                         <span class="input-group-text bg kt-pointer font-weight" id="basic-addon2"
                             (click)="file1.click()">Attach</span>
@@ -30,10 +30,10 @@
                         (change)="fileUpload($event,'loanAgreementCopy')">
                 </div>
             </div>
-            <div class="col-4"  >
+            <div class="col-4">
                 <div class="input-group mb-3">
                     <input type="text" class="form-control" placeholder="Select File" aria-label="Recipient's username"
-                        aria-describedby="basic-addon2" readonly />
+                        aria-describedby="basic-addon2" readonly formControlName="pawnTicketImageName" />
                     <div class="input-group-append">
                         <span class="input-group-text bg kt-pointer font-weight" id="basic-addon2"
                             (click)="file2.click()">Attach</span>
@@ -45,7 +45,7 @@
             <div class="col-4" *ngIf="!show">
                 <div class="input-group mb-3">
                     <input type="text" class="form-control" placeholder="Select File" aria-label="Recipient's username"
-                        aria-describedby="basic-addon2" readonly />
+                        aria-describedby="basic-addon2" readonly formControlName="schemeConfirmationImageName" />
                     <div class="input-group-append">
                         <span class="input-group-text bg kt-pointer font-weight" id="basic-addon2"
                             (click)="file3.click()">Attach</span>
@@ -57,40 +57,39 @@
             <div class="col-4" *ngIf="show">
                 <div class="input-group mb-3">
                     <input type="text" class="form-control" placeholder="Select File" aria-label="Recipient's username"
-                        aria-describedby="basic-addon2" readonly />
+                        aria-describedby="basic-addon2" readonly formControlName="signedChequeImageName" />
                     <div class="input-group-append">
                         <span class="input-group-text bg kt-pointer font-weight" id="basic-addon2"
                             (click)="file3.click()">Attach</span>
                     </div>
                     <input type="file" class="d-none" accept="image/png, image/jpeg" #file3
-                        (change)="fileUpload($event,'schemeConfirmation')">
+                        (change)="fileUpload($event,'signedCheque')">
                 </div>
             </div>
             <div class="col-4" *ngIf="show">
                 <div class="input-group mb-3">
                     <input type="text" class="form-control" placeholder="Select File" aria-label="Recipient's username"
-                        aria-describedby="basic-addon2" readonly />
+                        aria-describedby="basic-addon2" readonly formControlName="declarationCopyImageName" />
                     <div class="input-group-append">
                         <span class="input-group-text bg kt-pointer font-weight" id="basic-addon2"
                             (click)="file3.click()">Attach</span>
                     </div>
                     <input type="file" class="d-none" accept="image/png, image/jpeg" #file3
-                        (change)="fileUpload($event,'schemeConfirmation')">
+                        (change)="fileUpload($event,'declarationCopy')">
                 </div>
             </div>
         </div>
         <div class="row">
-            <div class="col"  *ngIf="!show">
+            <div class="col" *ngIf="!show">
                 <div class="row">
                     <div class="col-10">
-                        <div class="img-container" style="width: 250px;"
-                            *ngIf="!documentsForm.controls.loanAgreementCopy.value">
+                        <div class="img-container width" *ngIf="!documentsForm.controls.loanAgreementCopy.value">
                             <img src="../../../../../../../assets/media/icons/image-placeholder.png"
                                 class="placeholder-image">
                         </div>
 
                         <div class="" *ngIf="documentsForm.controls.loanAgreementCopy.value">
-                            <div class="d-inline-block img-container kt-margin-r-15">
+                            <div class="d-inline-block img-container width kt-margin-r-15">
                                 <img class="fetched-image" [src]="documentsForm.controls.loanAgreementCopy.value">
                                 <img src="../../../../../assets/media/icons/edit.svg" alt=""
                                     class="kt-pointer remove-icon" (click)="removeImages(idx);">
@@ -100,17 +99,16 @@
                 </div>
 
             </div>
-            <div class="col"  >
+            <div class="col">
                 <div class="row">
                     <div class="col-10">
-                        <div class="img-container" style="width: 250px;"
-                            *ngIf="!documentsForm.controls.pawnTicket.value">
+                        <div class="img-container width" *ngIf="!documentsForm.controls.pawnTicket.value">
                             <img src="../../../../../../../assets/media/icons/image-placeholder.png"
                                 class="placeholder-image">
                         </div>
 
                         <div class="" *ngIf="documentsForm.controls.pawnTicket.value">
-                            <div class="d-inline-block img-container kt-margin-r-15">
+                            <div class="d-inline-block img-container width kt-margin-r-15">
                                 <img class="fetched-image" [src]="documentsForm.controls.pawnTicket.value">
                                 <img src="../../../../../assets/media/icons/edit.svg" alt=""
                                     class="kt-pointer remove-icon" (click)="removeImages(idx);">
@@ -123,14 +121,13 @@
             <div class="col" *ngIf="!show">
                 <div class="row">
                     <div class="col-10">
-                        <div class="img-container" style="width: 250px;"
-                            *ngIf="!documentsForm.controls.schemeConfirmation.value">
+                        <div class="img-container width" *ngIf="!documentsForm.controls.schemeConfirmation.value">
                             <img src="../../../../../../../assets/media/icons/image-placeholder.png"
                                 class="placeholder-image">
                         </div>
 
                         <div class="" *ngIf="documentsForm.controls.schemeConfirmation.value">
-                            <div class="d-inline-block img-container kt-margin-r-15">
+                            <div class="d-inline-block img-container width kt-margin-r-15">
                                 <img class="fetched-image" [src]="documentsForm.controls.schemeConfirmation.value">
                                 <img src="../../../../../assets/media/icons/edit.svg" alt=""
                                     class="kt-pointer remove-icon" (click)="removeImages(idx);">
@@ -143,15 +140,14 @@
             <div class="col" *ngIf="show">
                 <div class="row">
                     <div class="col-10">
-                        <div class="img-container" style="width: 250px;"
-                            *ngIf="!documentsForm.controls.schemeConfirmation.value">
+                        <div class="img-container width" *ngIf="!documentsForm.controls.signedCheque.value">
                             <img src="../../../../../../../assets/media/icons/image-placeholder.png"
                                 class="placeholder-image">
                         </div>
 
-                        <div class="" *ngIf="documentsForm.controls.schemeConfirmation.value">
-                            <div class="d-inline-block img-container kt-margin-r-15">
-                                <img class="fetched-image" [src]="documentsForm.controls.schemeConfirmation.value">
+                        <div class="" *ngIf="documentsForm.controls.signedCheque.value">
+                            <div class="d-inline-block img-container width kt-margin-r-15">
+                                <img class="fetched-image" [src]="documentsForm.controls.signedCheque.value">
                                 <img src="../../../../../assets/media/icons/edit.svg" alt=""
                                     class="kt-pointer remove-icon" (click)="removeImages(idx);">
                             </div>
@@ -163,15 +159,14 @@
             <div class="col" *ngIf="show">
                 <div class="row">
                     <div class="col-10">
-                        <div class="img-container" style="width: 250px;"
-                            *ngIf="!documentsForm.controls.schemeConfirmation.value">
+                        <div class="img-container width" *ngIf="!documentsForm.controls.declartionCopy.value">
                             <img src="../../../../../../../assets/media/icons/image-placeholder.png"
                                 class="placeholder-image">
                         </div>
 
-                        <div class="" *ngIf="documentsForm.controls.schemeConfirmation.value">
-                            <div class="d-inline-block img-container kt-margin-r-15">
-                                <img class="fetched-image" [src]="documentsForm.controls.schemeConfirmation.value">
+                        <div class="" *ngIf="documentsForm.controls.declartionCopy.value">
+                            <div class="d-inline-block img-container width kt-margin-r-15">
+                                <img class="fetched-image" [src]="documentsForm.controls.declartionCopy.value">
                                 <img src="../../../../../assets/media/icons/edit.svg" alt=""
                                     class="kt-pointer remove-icon" (click)="removeImages(idx);">
                             </div>
@@ -182,3 +177,4 @@
             </div>
         </div>
     </div>
+</div>
