--- a/gold-admin-frontend/src/app/views/pages/admin/loan-settings/loan-scheme/loan-scheme.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-settings/loan-scheme/loan-scheme.component.html
@@ -1,5 +1,5 @@
 <div class="">
-    <label class="text-color font-weight-bold h-v-text-center min-vh-100" *ngIf="schemes.length==0">No Schemes
+    <label class="text-color font-weight-bold h-v-text-center min-vh-100" *ngIf="schemes && schemes?.length==0">No Schemes
         Available</label>
 </div>
 
