bhushan::review changes

--- a/gold-admin-frontend/src/app/views/pages/admin/lead-management/add-lead/add-lead.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/lead-management/add-lead/add-lead.component.html
@@ -357,7 +357,7 @@
 
 
                         <!-- Status -->
-                        <div class="row kt-padding-t-15">
+                        <div class="row kt-padding-t-15 kt-padding-b-15">
                             <div class="col-4 form-label">
                                 <mat-label class="mandatory">Select Status</mat-label>
                             </div>
