--- a/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
+++ b/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
@@ -44,6 +44,14 @@
             <div *ngxPermissionsOnly="permissionType; then thenBlock"></div>
             <kt-filter *ngIf="showfilter" (filterApplyEvent)="applyFilter($event)" [filterName]="filterName"
                 [listType]="listType" [filterWidth]="filterWidth"></kt-filter>
+            <div *ngIf="sortFlag" [ngStyle]="{'display':'contents'}">
+                <p class="my-auto"><b>Sort By :</b>&nbsp;</p>
+                <select class="form-control" [ngStyle]="{'width':'60%'}" (change)="sortValue($event.target.value)">
+                    <option value="price">Price</option>
+                    <option value="name">Name</option>
+                </select>&nbsp;
+                <img class="kt-pointer" [src]="sortImg" width="16px" alt="sort" (click)="sort()">
+            </div>
         </div>
     </div>
 </div>
