--- a/gold-admin-frontend/src/app/views/pages/admin/applied-kyc/applied-kyc.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/applied-kyc/applied-kyc.component.scss
@@ -26,11 +26,12 @@
 	// 	flex: 0 0 9% !important;
 	// }
 	.mat-column-appraiser {
-		flex: 0 0 14% !important;
+		flex: 0 0 9% !important;
 	}
-	// .mat-column-appraiserName {
-	// 	flex: 0 0 14% !important;
-	// }.mat-column-customerId {
+	.mat-column-appraiserName {
+		flex: 0 0 9% !important;
+	}
+	// .mat-column-customerId {
 	// 	flex: 0 0 10% !important;
 	// }
 }
