--- a/gold-admin-frontend/src/app/views/partials/components/user-classification/user-classification.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/user-classification/user-classification.component.html
@@ -70,7 +70,7 @@
                             <tr>
                                 <th scope="col" style="width: 40%" class="rating-title">Category</th>
                                 <th scope="col" style="width: 30%" class="rating-cce">CCE</th>
-                                <th scope="col" style="width: 30%" class="rating-bm" *ngIf="viewBMForm">BM/ Operation
+                                <th scope="col" style="width: 30%" class="rating-bm" *ngIf="viewBMForm">Operation
                                     Team</th>
                             </tr>
                         </thead>
@@ -155,7 +155,7 @@
                                     </select>
                                 </td>
                                 <td class="rating-bm" *ngIf="viewBMForm">
-                                    <select class="form-control" formControlName="kycStatusFromBm">
+                                    <select class="form-control" formControlName="kycStatusFromOperationalTeam">
                                         <option value="pending" disabled selected> Select Status
                                         </option>
                                         <option *ngFor="let status of bmKycStatus" [value]="status.value">
@@ -171,7 +171,7 @@
                                 <label for="" class="kt-padding-l-10 m-0">Reason by B.M -</label>
                             </div>
                             <div class="col-8 ">
-                                {{cceControls.reasonFromBm.value}}
+                                {{cceControls.reasonFromOperationalTeam.value}}
                             </div>
                         </div>
                     </div>
@@ -204,11 +204,11 @@
                     </div>
                 </div>
                 <!-- </ng-container> -->
-                <div *ngIf="showTextBoxBM && userType== 5" class="col kt-margin-t-20 kt-margin-b-20"
+                <div *ngIf="showTextBoxBM && userType== 8" class="col kt-margin-t-20 kt-margin-b-20"
                     style="width: 600px; margin: auto">
                     <mat-form-field class="w-100">
                         <mat-label class="mandatory">Reason for selected status</mat-label>
-                        <textarea matInput formControlName="reasonFromBm"
+                        <textarea matInput formControlName="reasonFromOperationalTeam"
                             placeholder="Enter a valid reason for your action"></textarea>
                         <mat-error>Field Required</mat-error>
                     </mat-form-field>
