changes and uat

--- a/gold-admin-frontend/src/app/views/pages/auth/login/login.component.html
+++ b/gold-admin-frontend/src/app/views/pages/auth/login/login.component.html
@@ -57,7 +57,7 @@
 			<p class="text-center forgot kt-pointer" routerLink="/auth/forgot-password">Forgot Password?</p>
 		</div>
 		<div class=" kt-margin-b-15">
-			<button class="btn btn-sign-otp w-100" (click)="signInWithOtp()">Sign In With Otp</button>
+			<button class="btn btn-sign-otp w-100" (click)="signInWithOtp()">Sign In With OTP</button>
 		</div>
 		<div class=" kt-margin-b-15">
 			<button class="btn btn-sign-otp w-100" (click)="brokerRegister()">Register as a broker</button>
