--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/upload-packets/upload-packets.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/upload-packets/upload-packets.component.html
@@ -22,7 +22,7 @@
                     <label for="">Ornament Type</label>
                 </div>
                 <div class="col-7">
-                    <kt-multi-select-search formControlName="ornamentType" [items]="ornamentType" [multiple]="true"
+                    <kt-multi-select-search formControlName="ornamentType" [items]="ornamentTypeData" [multiple]="true"
                         [bindLabel]="'ornamentType'" [isClear]="clearData" [placeholder]="'Ornament Type'" [selectAll]="true">
                     </kt-multi-select-search>
                     <mat-error
