--- a/gold-admin-frontend/src/app/views/partials/components/multi-select-search/multi-select-search.component.scss
+++ b/gold-admin-frontend/src/app/views/partials/components/multi-select-search/multi-select-search.component.scss
@@ -5,6 +5,9 @@
         height: 15px !important;
         width: 15px !important;
     }
+    .header-checkmark{
+        top : 17px !important;
+    }
     .custom-checkbox .checkmark:after {
         left: 5px !important;
         top: 1px !important;
