bhushan::loan transfer list UI, minor changes, bug

--- a/gold-admin-frontend/src/app/views/pages/admin/applied-kyc/applied-kyc.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/applied-kyc/applied-kyc.component.html
@@ -137,7 +137,7 @@
                         <button mat-button [matMenuTriggerFor]="menu">
                             <mat-icon>more_vert</mat-icon>
                         </button>
-                        <mat-menu #menu="matMenu">
+                        <mat-menu #menu="matMenu" xPosition="before">
                             <button mat-menu-item (click)="applyLoan(loan)">Apply Loan</button>
                             <button mat-menu-item (click)="transferLoan(loan)">Transfer Loan</button>
                         </mat-menu>
